# sastrawi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: javanese_words.txt  stopwords.txt  words.txt
src/: affix_rules.rs  affixation.rs  dictionary.rs  lib.rs  morph_analyzer.rs  stemmer.rs  stopword.rs  tokenizer.rs
src/javanese/: affix_rules.rs  affixation.rs  dictionary.rs  mod.rs  stemmer.rs
tests/: javanese_test.rs  morph_analyzer_test.rs  test.rs
