[package]
name = "sastrawi"
version = "0.2.0"
edition = "2024"
authors = ["ibahasa Team"]
license = "MIT"
repository = "https://github.com/ibahasa/sastrawi-rs"
description = "Modern Indonesian Stemmer (Sastrawi-rs). Reviving Indonesian NLP in Rust with memory-efficient structures and full PUEBI compatibility."

[lib]
name = "sastrawi"
path = "src/lib.rs"

[dependencies]
fst = "0.4"
bincode = "1.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
regex = "1"