[package]
name = "sastrawi-rs"
version = "0.5.1"
edition = "2024"
authors = ["ibahasa Team <halo@ibahasa.com>"]
license = "MIT"
repository = "https://github.com/ibahasa/sastrawi-rs"
homepage = "https://ibahasa.com"
documentation = "https://docs.rs/sastrawi-rs"
readme = "README.md"
description = "High-performance Indonesian stemmer (Nazief-Adriani + ECS). Zero-regex, FST-powered, Rust 2024."
keywords = ["indonesian", "stemmer", "nlp", "bahasa", "sastrawi"]
categories = ["text-processing", "algorithms", "science"]
exclude = [
    "apps/",
    "extract_words.rs",
    ".github/",
]

[lib]
name = "sastrawi"
path = "src/lib.rs"

[dependencies]
fst = "0.4"
once_cell = "1.18"

[build-dependencies]
fst = "0.4"